--- a/painel_cliente/templates/painel_cliente/movimentacoes.html
+++ b/painel_cliente/templates/painel_cliente/movimentacoes.html
@@ -1,13 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Movimentações de Pontos</title>
-    <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}">
-</head>
-<body>
-    <div class="container">
+{% extends 'painel_cliente/base_painel.html' %}
+
+{% block title %}Movimentações de Pontos{% endblock %}
+
+{% block content %}
         <a class="back-link" href="{% url 'painel_dashboard' %}">&larr; Voltar ao painel</a>
         <h1>Extrato - {{ conta.programa.nome }}</h1>
         <table>
@@ -36,6 +31,5 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
-</body>
-</html>
+{% endblock %}
+
