--- a/painel_cliente/templates/registration/login.html
+++ b/painel_cliente/templates/registration/login.html
@@ -1,6 +1,7 @@
 {% extends 'painel_cliente/base_painel.html' %}
 
 {% block title %}Login - NCfly{% endblock %}
+{% block body_class %}login-page{% endblock %}
 
 {% block content %}
   <div class="login-container">
