--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - NCfly</title>
-  <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}" />
+    <title>Login</title>
+    <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}">
 </head>
-<body>
+<body class="login-page">
    <div class="login-container">
+     <img src="{% static 'painel_cliente/ncfly_logo.png' %}" alt="Logo NCfly" class="login-logo">
     <h2>Bem-vindo ao NCfly</h2>
     {% if messages %}
     <div class="erro">
@@ -33,6 +34,5 @@
       <button type="submit">Entrar</button>
     </form>
     </div>
-  </div>
-</body>
+  </body>
 </html>
