--- a/painel_cliente/templates/painel_cliente/base_painel.html
+++ b/painel_cliente/templates/painel_cliente/base_painel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
     <div class="container">
         {% block content %}{% endblock %}
     </div>
