--- a/gestao/templates/admin_custom/nova_movimentacao.html
+++ b/gestao/templates/admin_custom/nova_movimentacao.html
@@ -16,7 +16,7 @@
         {% endfor %}
         <div class="form-actions">
             <button type="submit" class="btn-primary">Salvar</button>
-            <a href="{% url 'admin_movimentacoes' conta.id %}" class="ml-3 bg-zinc-600 hover:bg-zinc-700 text-white px-4 py-2 rounded">Cancelar</a>
+            <a href="{% url 'admin_movimentacoes' conta.id %}" class="btn ml-3">Cancelar</a>
         </div>
     </form>
 </div>
